--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,24 +1,55 @@
-body {
-    background-color: #3b404e;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-.item {
-    background-color: #1EAAFC;
-    background-image: linear-gradient(130deg, #6C52D9 0%, #1EAAFC 85%, #3EDFD7 100%);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    color: #fff;
-    border-radius: 4px;
-    border: 6px solid #171717;
-  }
+.header {
+    grid-area: hd;
+}
+.nav {
+    grid-area: nav;
+}
+.footer {
+    grid-area: ft;
+}
+.content {
+    grid-area: main;
+}
+.sidebar {
+    grid-area: sd;
+}
 
-  .container {
+.title {
+
+}
+
+.wrapper {
     display: grid;
-    width: 800px;
-    grid-template-columns: 100px 30% 1fr;
-    grid-auto-rows: 150px;
-    grid-gap: 1rem;
-  }
+    grid-template-columns: repeat(9, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-template-areas: 
+      "hd hd hd hd   hd   hd   hd   hd   hd"
+      "nav nav nav nav nav nav nav nav nav"
+      "sd sd main main main main main main main"
+      "sd sd main main main main main main main"
+}
+* {box-sizing: border-box;}
+
+.wrapper {
+    border: 2px solid blue;
+    border-radius: 5px;
+    background-color: white;
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
+.wrapper > div {
+    border: 2px solid #000000;
+    border-radius: 5px;
+    background-color: #eeeeee;
+    padding: 1em;
+    color: #666666;
+}
+
+@media (max-width: 700px) {
+    .wrapper {
+        grid-template-areas: 
+          "hd hd hd   hd   hd   hd   hd   hd hd"
+          "sd sd main main main main main ft ft";
+    }
+}
