--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,20 @@
+p {
+    color: ;
+}
+
+a.button {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    text-decoration: none;
+    background: #eff4fa;
+    color: #1d2e36;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 0;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr;
@@ -12,6 +29,31 @@
     background: #white;
 }
 
+.container footer {
+    background: #0c2856;
+    color: white;
+    
+}
+
+h1 {
+    font-family: "trajan-pro-3";
+    font-size: 50px;
+    margin-top: 0px;
+    color: #1d2e36;    
+}
+
+header {
+    position: relative;
+    padding: 0;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    top: 0;
+    height: 60px;
+}
+footer a {
+    color: white;
+    font-size: 14px;
+}
 .container sidebar {
     background: #eff4fa;
 }
@@ -48,23 +90,39 @@ sidebar a:hover {
     text-decoration: none;
 }
 
+sidebar {
+    overflow-y: scroll;
+    height: 100vh;
+    margin-bottom: 50px;
+
+}
 @media only screen and (min-width: 600px) {
     
     /* grid */
     .container {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(6, 1fr);
     }
 
     /* specific item styles */
     .container header,
-    .container nav {
-        grid-column: span 4;
+    .container nav,
+    .container footer {
+        grid-column: span 6;
     }
+    .container footer {
+        position: fixed;
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        height: 20px
+    }
+
     .container sidebar {
         grid-column: span 1;
     }
     .container section {
-        grid-column: span 3;
+        grid-column: span 5;
+        margin-bottom: 30px;
     }
 
     /* nav styles */
@@ -80,6 +138,9 @@ sidebar a:hover {
 
 @media only screen and (max-width: 599px) {
 
+    h1 {
+        font-size: 40px;
+    }
     #nav {
         position: fixed;
         top: -340px;
@@ -118,4 +179,26 @@ sidebar a:hover {
 
 body {
     font-family: "Verdana"
+}
+
+p {
+    color: #1d2e36
+}
+
+/* sidebar navigation styles */
+
+sidebar ul {
+    margin-left: 20px;
+    list-style: square;
+    color: #0c2856;
+}
+
+sidebar ul ul li {
+margin-left: 20px;
+font-size: 18px;
+}
+
+sidebar ul ul ul li {
+    margin-left: 20px;
+    font-size: 16px; 
 }
