--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,7 @@ sidebar a:hover {
 sidebar {
     overflow-y: scroll;
     height: 100vh;
+    min-width: 200px;
     margin-bottom: 50px;
 
 }
@@ -100,14 +101,14 @@ sidebar {
     
     /* grid */
     .container {
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: repeat(5, 1fr);
     }
 
     /* specific item styles */
     .container header,
     .container nav,
     .container footer {
-        grid-column: span 6;
+        grid-column: span 5;
     }
     .container footer {
         position: fixed;
@@ -121,7 +122,7 @@ sidebar {
         grid-column: span 1;
     }
     .container section {
-        grid-column: span 5;
+        grid-column: span 4;
         margin-bottom: 30px;
     }
 
