--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@ a.button {
     -webkit-appearance: button;
     -moz-appearance: button;
     appearance: button;
-
     text-decoration: none;
     background: #eff4fa;
     color: #1d2e36;
@@ -116,7 +115,7 @@ sidebar a:hover {
     .container sidebar {
         grid-column: span 1;
     }
-    .container section {
+    .content {
         grid-column: span 4;
         margin-bottom: 30px;
     }
@@ -235,3 +234,9 @@ sidebar ul ul ul li {
     padding-left: 20px;
     cursor           : pointer;
   }
+
+/* highlighting in table of contents */
+.toc {
+    padding-top: 5px;
+    padding-left: 5px;
+}
