Update phone screen navigation icons

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@ a.button {
 .container footer {
     background: #0c2856;
     color: white;
+    width: 100;
     
 }
 
@@ -150,6 +151,7 @@ sidebar a:hover {
     h1 {
         font-size: 40px;
     }
+
     #nav {
         position: fixed;
         top: -340px;
@@ -240,3 +242,21 @@ sidebar ul ul ul li {
     padding-top: 5px;
     padding-left: 5px;
 }
+
+#phone-nav {
+    width: 40px;
+    position: fixed;
+    top: 2px;
+    right: 5px;
+    border-style: 1px solid;
+    border-color: #0c2856;
+}
+
+#sidebar-phone {
+    width: 20px;
+    position: fixed;
+    top: 50vh;
+    left: 0px;
+    z-index: 950;
+}
+
